--- a/index.html
+++ b/index.html
@@ -1,13 +1,238 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Foodies - Organic Food Store</title>
-    <!-- favicon --->
-
-    <!-- Css -->
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
+    <!-- CSS -->
     <link href="./style.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <!-- navbar mobile start -->
+      <nav role="navigation" class="mobile-nav">
+        <div id="menuToggle">
+          <input type="checkbox" id="menuCheckbox" />
+          <span></span>
+          <span></span>
+          <span></span>
+          <ul id="menu">
+            <li>
+              <a href="./index.html">
+                <label for="menuCheckbox" onclick="this.parentNode.click();"
+                  >Home</label
+                >
+              </a>
+            </li>
+            <li>
+              <a href="#about">
+                <label for="menuCheckbox" onclick="this.parentNode.click();"
+                  >About Us</label
+                >
+              </a>
+            </li>
+            <li>
+              <label for="menuCheckbox"
+                ><a href="#services">Service Us</a></label
+              >
+            </li>
+            <li>
+              <label for="menuCheckbox"><a href="#company">Company</a></label>
+            </li>
+            <li>
+              <label for="menuCheckbox"><a href="#pages">Pages</a></label>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <!-- navbar mobile end -->
+
+      <!-- navbar desktop start -->
+      <nav class="desktop-nav">
+        <img src="./img/logo.png" alt="logo" class="logo" />
+        <ul class="nav-list">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Service Us</a></li>
+          <li><a href="#">Company</a></li>
+          <li><a href="#">Pages</a></li>
+        </ul>
+      </nav>
+      <!-- navbar desktop end -->
+
+      <!-- hero section start -->
+      <section class="hero">
+        <div class="text">
+          <h1 class="hero-text">We're Serious For Food</h1>
+          <p class="hero-desc">
+            We strive to provide a space where guests can connect with
+            themselves and explore their full potential, offering a safe place.
+          </p>
+          <button class="hero-btn">
+            Get Started
+            <img src="./img/arrow-white.png" alt="Arrow" />
+          </button>
+
+          <div class="hero-company-desktop">
+            <img src="./img/company-1.png" alt="company" />
+            <img src="./img/company-2.png" alt="company" />
+            <img src="./img/company-2.png" alt="company" />
+          </div>
+        </div>
+
+        <div class="img">
+          <img src="./img/hero.png" alt="Hero img" class="hero-img" />
+          <div class="hero-overlap">
+            <img src="./img/ratings.png" alt="ratings" class="overlap-1" />
+            <img src="./img/review.png" alt="ratings" class="overlap-2" />
+          </div>
+        </div>
+
+        <div class="hero-company">
+          <img src="./img/company-1.png" alt="company" />
+          <img src="./img/company-2.png" alt="company" />
+          <img src="./img/company-2.png" alt="company" />
+        </div>
+      </section>
+
+      <hr class="hero-divider" />
+
+      <!-- hero section end -->
+
+      <!-- services section start -->
+      <section class="services">
+        <div class="services-box-1">
+          <div class="services-card-1">
+            <img src="./img/car-icon.png" alt="car" class="box-img" />
+            <h3 class="card-head">Free Shipping</h3>
+            <p class="card-desc">Order over $140</p>
+          </div>
+          <div class="services-card-2">
+            <img src="./img/devide-icon.png" alt="promo" class="box-img" />
+            <h3 class="card-head">Special Promo</h3>
+            <p class="card-desc">Get Special Promo</p>
+          </div>
+        </div>
+        <div class="services-box-2">
+          <div class="services-card-3">
+            <img src="./img/wallet-icon.png" alt="wallet" class="box-img" />
+            <h3 class="card-head">Quick Payment</h3>
+            <p class="card-desc">100% Secure Payment</p>
+          </div>
+          <div class="services-card-4">
+            <img src="./img/car-icon.png" alt="car" class="box-img" />
+            <h3 class="card-head">24/7 Support</h3>
+            <p class="card-desc">Ready Support</p>
+          </div>
+        </div>
+      </section>
+      <hr class="services-divider" />
+      <!-- services section end -->
+
+      <!-- benefit section start -->
+      <section class="benefit">
+        <img src="./img/vegitables.png" alt="vegetables" class="benefit-1" />
+        <div class="benefit-text">
+          <p>Our Benefit</p>
+          <h3>The more healthy food the better</h3>
+          <ul>
+            <li>Be Alive With Veggie Food.</li>
+            <li>It's The Place To Be.</li>
+            <li>Nonstop Veggie Food.</li>
+            <li>The Best Silk Dish In Town.</li>
+            <li>Truffles, Egg & Pumpkin Spice</li>
+          </ul>
+        </div>
+      </section>
+      <section class="benefit-2">
+        <img src="./img/drink.png" alt="drinks" class="benefit-2" />
+        <div class="benefit-text">
+          <p>Our Stars</p>
+          <h3>Veggie food goes on and always on</h3>
+          <div class="benefit-stats">
+            <div>
+              <h4>1500</h4>
+              <h6>Sold Products</h6>
+            </div>
+            <div>
+              <h4>500</h4>
+              <h6>Positive Feedback</h6>
+            </div>
+            <div>
+              <h4>400</h4>
+              <h6>Official Store</h6>
+            </div>
+          </div>
+          <button class="hero-btn">
+            Get Special Promo
+            <img src="./img/arrow-white.png" alt="white arrow" />
+          </button>
+        </div>
+      </section>
+      <!-- benefit section end -->
+
+      <!-- variety section start -->
+      <section class="variety">
+        <div class="text">
+          <p>Our Features</p>
+          <h3>Variety of Foods</h3>
+        </div>
+        <div class="cards-1">
+          <div>
+            <img src="./img/food-1.png" alt="food 1" />
+          </div>
+          <div class="after-food">
+            <h4>Veggies are forever</h4>
+            <p>We after the following services</p>
+            <button>
+              Discover Now
+              <img src="./img/arrow-green.png" alt="green Arrow" />
+            </button>
+          </div>
+          <div>
+            <img src="./img/food-2.png" alt="food 2" />
+          </div>
+          <div class="after-food">
+            <h4>Good for your skin</h4>
+            <p>We after the following services</p>
+            <button>
+              Discover Now
+              <img src="./img/arrow-green.png" alt="green Arrow" />
+            </button>
+          </div>
+        </div>
+        <div class="cards-2">
+          <div>
+            <img src="./img/food-3.png" alt="food 3" />
+          </div>
+          <div class="after-food">
+            <h4>Veggie food grove</h4>
+            <p>We after the following services</p>
+            <button>
+              Discover Now
+              <img src="./img/arrow-green.png" alt="green Arrow" />
+            </button>
+          </div>
+          <div>
+            <img src="./img/food-4.png" alt="food 4" />
+          </div>
+          <div class="after-food">
+            <h4>That comes close</h4>
+            <p>We after the following services</p>
+            <button>
+              Discover Now
+              <img src="./img/arrow-green.png" alt="green Arrow" />
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- variety section end -->
+
+       <!-- product section start -->
+        
+       <!-- product section end -->
+    </div>
+  </body>
 </html>
