--- a/index.html
+++ b/index.html
@@ -230,9 +230,101 @@
       </section>
       <!-- variety section end -->
 
-       <!-- product section start -->
-        
-       <!-- product section end -->
+      <!-- product section start -->
+      <section class="product">
+        <div class="text">
+          <p>Our Product</p>
+          <h3>Most popular product</h3>
+        </div>
+        <div class="product-container">
+          <div class="product-card">
+            <img src="./img/product-1.png" alt="product 1" />
+            <img src="./img/star.png" alt="5 star" />
+            <h4>Summer Veganie</h4>
+            <p><del>$25</del> $29</p>
+            <button>
+              Buy Now <img src="./img/arrow-green.png" alt="buy now" />
+            </button>
+          </div>
+          <div class="product-card">
+            <img src="./img/product-2.png" alt="product 2" />
+            <img src="./img/star.png" alt="5 star" />
+            <h4>Greanie Seafood</h4>
+            <p><del>$25</del> $29</p>
+            <button>
+              Buy Now <img src="./img/arrow-green.png" alt="buy now" />
+            </button>
+          </div>
+          <div class="product-card">
+            <img src="./img/product-3.png" alt="product 3" />
+            <img src="./img/star.png" alt="5 star" />
+            <h4>Fresh Vegetable</h4>
+            <p><del>$25</del> $29</p>
+            <button>
+              Buy Now <img src="./img/arrow-green.png" alt="buy now" />
+            </button>
+          </div>
+          <div class="product-card">
+            <img src="./img/product-4.png" alt="product 4" />
+            <img src="./img/star.png" alt="5 star" />
+            <h4>Fresh Meatyus</h4>
+            <p><del>$25</del> $29</p>
+            <button>
+              Buy Now <img src="./img/arrow-green.png" alt="buy now" />
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- product section end -->
+
+      <!-- add section start -->
+      <section class="add">
+        <h2>Veggie food?ingredients you want to try</h2>
+        <button>
+          Get Started <img src="./img/arrow-white.png" alt="white arrow" />
+        </button>
+      </section>
+      <!-- add section end -->
+
+      <!-- footer section start -->
+      <footer>
+        <div class="part-1">
+          <img src="./img/logo.png" alt="Logo" class="logo" />
+          <p class="desc1">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
+            quos, et suscipit
+          </p>
+          <img src="./img/social-media.png" alt="social media" class="social" />
+        </div>
+        <div>
+          <h3>About Us</h3>
+          <ul>
+            <li>About Us</li>
+            <li>Service Us</li>
+            <li>Contact</li>
+            <li>Company</li>
+          </ul>
+        </div>
+        <div>
+          <h3>Company</h3>
+          <ul>
+            <li>Partnership</li>
+            <li>Terms of Use</li>
+            <li>Privacy</li>
+            <li>Sitemap</li>
+          </ul>
+        </div>
+        <div class="part-4">
+          <h3>Get in touch</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, illo?</p>
+          <div class="contact">
+            <input type="email" name="email" id="email" placeholder="Email">
+            <button class="hero-btn">Subscribe</button>
+          </div>
+        </div>
+        <p class="copy-mb">Copyright &copy 2025 Foddies</p>
+      </footer>
+      <!-- footer section end -->
     </div>
   </body>
 </html>
